logs/offboard_pkg/build.make.102.log.stderr
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:3:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/multi.cpp:2:20: error: expected ‘;’ before ‘void’
    2 | using namespace std
      |                    ^
      |                    ;
    3 | 
    4 | void Init_length(XmlRpc::XmlRpcValue &length_list, std::vector<double> &length)
      | ~~~~                
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
